# timeseriesplots

./: .gitattributes  .gitignore  Dockerfile  MANIFEST.in  README.md  conda_devtools.sh  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: build_and_test.yml
docs/: api.rst  conf.py  index.rst  overview.md  requirements.txt
src/tsp/: _version.py
src/tst/: _version.py  filewatcher.py  timeseries.py
