# Based on https://packaging.python.org/en/latest/tutorials/packaging-projects/
[metadata]
name = timeseriestools
version = 0.0.1
author = Jake Fennick
author_email = jake.fennick@axleinfo.com
description = Tools for analyzing and plotting timeseries data in realtime
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jfennick/timeseriestools
project_urls =
    Bug Tracker = https://github.com/jfennick/timeseriestools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib
    numpy
    scipy
    ruptures

[options.extras_require]
test =
    pytest
    pytest-cov
    coverage
    mypy
    pylint
    autopep8
    types-setuptools

# See docs/requirements.txt
doc =
    sphinx
    myst-parser
    sphinx-autodoc-typehints

all =
    %(test)s
    %(doc)s

[options.entry_points]
console_scripts =
    timeseriesplots = tst.timeseries:main

[options.packages.find]
where = src

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = src/tst/_version.py
versionfile_build = tst/_version.py
tag_prefix = ''

[build_sphinx]
source_dir = docs